src/render/html/snapshots/ntropy__render__html__emitter__tests__a_continuation_paragraph_stays_in_its_item.snap
---
source: src/render/html/emitter.rs
expression: "html(\"- first\\n\\n  continued\\n\\n- second\")"
---
<ul>
<li>
<p>first</p>

<p>continued</p>
</li>
<li>
<p>second</p>
</li>
</ul>
