src/render/html/snapshots/ntropy__render__html__emitter__tests__all_five_callout_kinds.snap
---
source: src/render/html/emitter.rs
expression: "html(\"> [!NOTE]\\n> n\\n\\n> [!TIP]\\n> t\\n\\n> [!IMPORTANT]\\n> i\\n\\n> [!WARNING]\\n> w\\n\\n> [!CAUTION]\\n> c\")"
---
<div class="callout callout-note">
<p class="callout-title">Note</p>
<p>n</p>
</div>

<div class="callout callout-tip">
<p class="callout-title">Tip</p>
<p>t</p>
</div>

<div class="callout callout-important">
<p class="callout-title">Important</p>
<p>i</p>
</div>

<div class="callout callout-warning">
<p class="callout-title">Warning</p>
<p>w</p>
</div>

<div class="callout callout-caution">
<p class="callout-title">Caution</p>
<p>c</p>
</div>
