src/render/html/snapshots/ntropy__render__html__emitter__tests__nested_lists_sit_inside_their_item.snap
---
source: src/render/html/emitter.rs
expression: "html(\"- a\\n  - b\\n    - c\\n- d\")"
---
<ul>
<li>
a
<ul>
<li>
b
<ul>
<li>c</li>
</ul>
</li>
</ul>
</li>
<li>d</li>
</ul>
